# Project

./: CMakeLists.txt
Task/: MyString.cpp  MyString.h
